# k4Bench

./: .codespellrc  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  codecov.yaml  gen_ref_pages.py  index.html  instructions.md  mkdocs.yml  objects.inv  pyproject.toml  q  requirements.txt  setup.sh  sitemap.xml
.devcontainer/: devcontainer.json
.github/: actionlint.yaml  blame-comments.yml  dependabot.yml
.github/benchmarks/: ALLEGRO_o1_v02.yml  ALLEGRO_o1_v03.yml  ALLEGRO_o2_v01.yml  CLD_o2_v08.yml  CLD_o3_v01.yml  IDEA_o1_v03.yml  IDEA_o2_v01.yml  ILD_FCCee_v01.yml  ILD_FCCee_v02.yml  SiD.yml
.github/scripts/: backfill_blame_rank.py  blame_comment.py  blame_preview.py  blame_report.py  lib_setup.sh  list_benchmarks.py  machine_info.py  nightly_benchmark.sh  regression_report.py  regression_report.sh  write_run_info.py
.github/workflows/: benchmark-detector.yml  ci.yml  deploy-dashboard.yml  docs.yml  nightly.yml  on-release-main.yml  regression-report.yml
architecture/component-diagrams/: index.html
architecture/data-flow/: index.html
architecture/overview/: index.html
dashboard/: Dockerfile  app.py  config.py  data.py  remote.py  remote_cache.py  requirements.txt  sections.py  stats.py  trend_window.py  ui_chrome.py  ui_utils.py
dashboard/tabs/: _blame.py  _regression_flags.py  _regression_trend.py  _reliability.py  detectors_overview.py  event_memory.py  event_timing.py  impact.py  machine_info.py  overview.py  region_timing.py  regressions.py  stack_changes.py  trends.py
dashboard/tabs/region_timing/: __init__.py  _common.py  attribution.py  current_run.py  historical.py  step_analysis.py
dd4bench/: __init__.py  cli.py
dd4bench/analysis/: __init__.py  loader.py  plots.py
dd4bench/analysis/plots/: __init__.py  _theme.py  _traces.py  _utils.py  event.py  overview.py  region.py
dd4bench/benchmark/: ddsim.py
dd4bench/geometry/: patcher.py  scanner.py
dd4bench/plugin/: runtime.py
dd4bench/results/: model.py  reporter.py
dd4bench/runner/: executor.py  parser.py
developer-guide/development-setup/: index.html
developer-guide/repository-layout/: index.html
docs/: faq.md  glossary.md  index.md  requirements.txt
docs/architecture/: component-diagrams.md  data-flow.md  overview.md
docs/developer-guide/: development-setup.md  repository-layout.md
docs/examples/: advanced-workflows.md  common-workflows.md
docs/getting-started/: first-workflow.md  installation.md  quickstart.md
docs/reference/: api-reference.md  configuration-reference.md  file-formats.md
docs/user-guide/: commands.md  configuration.md  overview.md
docs/user-guide/features/: analysis.md  dashboard.md  geometry-patching.md  pr-comments.md  sweep-modes.md  timing-plugins.md
email-previews/: README.md  generate_previews.py  k4bench-nightly-2026-06-27.html  k4bench-nightly-2026-06-28.html
examples/advanced-workflows/: index.html
examples/common-workflows/: index.html
faq/: index.html
getting-started/first-workflow/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
glossary/: index.html
k4bench/: __init__.py  cli.py  labels.py  remote.py
k4bench/analysis/: __init__.py  loader.py  trend.py
k4bench/analysis/plots/: __init__.py  _traces.py  event.py  region.py
k4bench/benchmark/: ddsim.py
k4bench/blame/: __init__.py  attribute.py  builder.py  comment.py  github.py  llm.py  models.py  prompt.py  publish.py  rank.py
k4bench/geometry/: patcher.py
k4bench/plugin/: runtime.py
k4bench/provenance/: __init__.py  diff.py  stack.py
k4bench/regression/: __init__.py  email.py  engine.py  models.py  notify.py  render.py  report_builder.py
k4bench/results/: reliability.py  reliability_evidence.py  reporter.py
k4bench/runner/: executor.py  steering.py
openshift/: deployment.yaml  route.yaml  service.yaml  userprovideddirectory.yaml
plugin/: CMakeLists.txt  DD4benchRegionTimingAction.cpp  DD4benchTimingAction.cpp  build.sh  k4BenchRegionTimingAction.cpp  k4BenchTimingAction.cpp
plugin/install/lib64/: libDD4benchTimingAction.components
reference/api/: index.html
reference/api-reference/: index.html
reference/api/SUMMARY/: index.html
reference/api/analysis/: index.html
reference/api/benchmark/: index.html
reference/api/blame/: index.html
reference/api/cli/: index.html
reference/api/geometry/: index.html
reference/api/labels/: index.html
reference/api/plugin/: index.html
reference/api/provenance/: index.html
reference/api/regression/: index.html
reference/api/remote/: index.html
reference/api/results/: index.html
reference/api/runner/: index.html
reference/configuration-reference/: index.html
reference/file-formats/: index.html
search/: search_index.json
tests/fixtures/: time_output.txt
tests/fixtures/minimal_geometry/: minimal.xml  (+1 more)
tests/integration/: test_links.py  test_plugin_build.py  test_regression_report.py  test_simulation.py
tests/unit/: test_analysis_loader.py  test_analysis_plots.py  test_backfill_blame.py  test_benchmark.py  test_blame_attribute.py  test_blame_builder.py  test_blame_comment.py  test_blame_github.py  test_blame_llm.py  test_blame_models.py  test_blame_preview.py  test_blame_prompt.py  test_blame_publish.py  test_blame_rank.py  test_cli.py  test_dashboard_blame.py  test_dashboard_detectors_overview.py  test_dashboard_event_views_apptest.py  test_dashboard_impact.py  test_dashboard_overview_apptest.py  test_dashboard_regressions_apptest.py  test_dashboard_stack_changes.py  test_dashboard_trends.py  test_dashboard_trends_flags.py  test_dashboard_ui_state.py  test_executor.py  test_executor_timeout.py  test_labels.py  test_list_benchmarks.py  test_parser.py  test_patcher.py  test_plugin_runtime.py  test_provenance_diff.py  test_provenance_stack.py  test_regression_email.py  test_regression_engine.py  test_regression_notify.py  test_regression_render.py  test_regression_report.py  test_reliability.py  (+7 more)
user-guide/commands/: index.html
user-guide/configuration/: index.html
user-guide/overview/: index.html
(+42 files in other folders)
